--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "kir ui",
   "scripts": {
     "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 8080 --content-base src",
-    "build": "NODE_ENV=production npm run webpack"
+    "build": "NODE_ENV=production webpack"
   },
   "author": "",
   "license": "",
